--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 <h1>Release Software More Often</h1>
+
+<h2>If it hurts, do it more often</h2>
+
+Back in the day, when a former colleague and I were talking about the three-monthly release,
+he referred to an article of [Martin Fowler](https://martinfowler.com/bliki/FrequencyReducesDifficulty.html)
+and added: "the reason that this four-times-a-year-release is so painful, is the time we did not release.
+After three months, nobody knows how to release and shortcuts that were taken last time, will be taken again
+due to deadline pressures". I totally agree with him and Martin Fowler. The article of the latter demonstrates
+the exponential increase of pain, the longer a release gets postponed. Imagine the pain if a release would be
+done once a year or two years...
